# hypr-taskspace

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.tsk/: on-start.sh  repo.toml
crates/lae-cli/: Cargo.toml
crates/lae-cli/src/: main.rs
crates/lae-core/: Cargo.toml
crates/lae-core/src/: binary.rs  config.rs  context_sync.rs  distrobox.rs  error.rs  host.rs  hypr_log.rs  hyprland.rs  hyprland_events.rs  lib.rs  models.rs  registry.rs  repos.rs  service.rs  state_notify.rs  task_cleanup.rs  task_paths.rs  task_repo.rs  taskspaces.rs  terminal.rs  trace.rs  vcs.rs  walker.rs  waybar.rs  workspace_nav.rs  workspace_slots.rs  workspaces.rs  xdg.rs
crates/lae-core/src/daemon/: client.rs  mod.rs  server.rs
crates/lae-core/src/install/: backup.rs  doctor.rs  hypr.rs  jsonc.rs  manifest.rs  mod.rs  path_link.rs  reload.rs  waybar.rs  wrapper.rs
crates/lae-tui/: Cargo.toml
crates/lae-tui/src/: app.rs  daemon_check.rs  grep_dir_picker.rs  lib.rs  modal.rs  new_task_form.rs  ui.rs
crates/lae-waybar/: Cargo.toml
crates/lae-waybar/src/: lib.rs
crates/tsk-cli/: Cargo.toml  build.rs
crates/tsk-cli/src/: main.rs
crates/tsk-core/: Cargo.toml
crates/tsk-core/src/: apps.rs  binary.rs  browser.rs  config.rs  context_sync.rs  dev_session.rs  distrobox.rs  error.rs  host.rs  hypr_log.rs  hyprland.rs  lib.rs  models.rs  registry.rs  repos.rs  service.rs  share.rs  state_notify.rs  task_cleanup.rs  task_env.rs  task_ids.rs  task_on_start.rs  task_paths.rs  task_repo.rs  taskspace_switch_guard.rs  taskspaces.rs  terminal.rs  trace.rs  vcs.rs  version.rs  walker.rs  waybar.rs  window_registry.rs  workspace_nav.rs  workspace_slots.rs  workspaces.rs  xdg.rs
crates/tsk-core/src/daemon/: client.rs  mod.rs  server.rs
crates/tsk-core/src/install/: backup.rs  bins.rs  doctor.rs  hypr.rs  jsonc.rs  manifest.rs  mod.rs  omarchy.rs  path_link.rs  profile.rs  reload.rs  systemd.rs  walker.rs  waybar.rs  wrapper.rs
crates/tsk-core/~/.config/tsk/: config.toml
crates/tsk-core/~/.local/share/tsk/: state.db
crates/tsk-tui/: Cargo.toml
crates/tsk-tui/src/: app.rs  daemon_check.rs  grep_dir_picker.rs  lib.rs  modal.rs  new_task_form.rs  ui.rs
crates/tsk-waybar/: Cargo.toml
crates/tsk-waybar/src/: lib.rs
docs/: cursor.md  dev.md  install.md  packaging.md
notes/: ai-convo-notes.md  daemon-lock-contention.md  poc-plan.md
packaging/arch/: .gitignore  PKGBUILD  config.toml.example  install-share.sh
scripts/: bench-latency.sh  cleanup-legacy-install.sh  close-test-terminals.sh  dev.sh  install-systemd.sh  install-user-share.sh
share/elephant/: lae_tasks.lua
share/hypr/: README.md  bindings.conf  daemon-systemd.conf  unbind-omarchy.conf  window-rules.conf
share/hypr/integrations/: omarchy-escape-hatch.conf  omarchy-unbind.conf
share/systemd/: tskd.service
share/walker/: README.md
share/waybar/: cffi-module.jsonc  lae-context.jsonc  lae-style.css  modules.jsonc  tsk-context.jsonc  tsk-style.css
src/lae/: __init__.py  waybar_cache.py
src/lae/cli/: client.py  context.py  daemon.py  desktop.py  install.py  main.py  task.py  taskspace.py  waybar.py  workspace.py
src/lae/core/: config.py  models.py  registry.py  task_cleanup.py  taskspaces.py  workspaces.py
src/lae/daemon/: context_sync.py  desktop_nav.py  server.py  service.py  waybar_export.py  window_router.py  workspace_nav.py
src/lae/install/: backup.py  hypr.py  manifest.py  reload.py  waybar.py  wrapper.py
src/lae/integrations/: distrobox.py  git.py  hyprland.py  hyprland_events.py  waybar_notify.py
src/lae/util/: subprocess.py  xdg.py
src/tsk/: __init__.py  waybar_cache.py
src/tsk/cli/: client.py  context.py  daemon.py  desktop.py  install.py  main.py  task.py  taskspace.py  waybar.py  workspace.py
src/tsk/core/: config.py  models.py  registry.py  task_cleanup.py  taskspaces.py  workspaces.py
src/tsk/daemon/: context_sync.py  desktop_nav.py  server.py  service.py  waybar_export.py  window_router.py  workspace_nav.py
src/tsk/install/: hypr.py  reload.py  waybar.py  wrapper.py
src/tsk/integrations/: distrobox.py  git.py  hyprland.py  hyprland_events.py  waybar_notify.py
src/tsk/util/: xdg.py
