[workspace]
resolver = "2"
members = [
    "crates/lae-core",
    "crates/lae-waybar",
    "crates/lae-cli",
    "crates/lae-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jsimonrichard/local-agentic-env"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
regex = "1"
