[workspace]
resolver = "2"
members = [
    "crates/tsk-core",
    "crates/tsk-waybar",
    "crates/tsk-cli",
    "crates/tsk-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jsimonrichard/hypr-taskspace"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
regex = "1"
