[project]
name = "local-agentic-env"
version = "0.1.0"
description = "Local Agentic Environment — task-centric Hyprland + Distrobox control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
lae = "lae.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lae"]

[tool.hatch.build.targets.wheel.force-include]
"share/hypr" = "share/hypr"
"share/waybar" = "share/waybar"
"share/elephant" = "share/elephant"
