[project]
name = "local-agentic-env"
version = "0.1.0"
description = "Local Agentic Environment — legacy Python control plane (Rust CLI in crates/lae-cli is primary)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
# Legacy Python CLI — use `python -m lae.cli.main` or the Rust `lae` from `lae install hypr`.
lae-py = "lae.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lae"]

[tool.hatch.build.targets.wheel.force-include]
"share/hypr" = "share/hypr"
"share/waybar" = "share/waybar"
"share/elephant" = "share/elephant"
