[project]
name = "hypr-taskspace"
version = "0.1.0"
description = "Hypr Taskspace — legacy Python control plane (Rust CLI in crates/tsk-cli is primary)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
# Legacy Python CLI — use `python -m tsk.cli.main` or the Rust `tsk` from `tsk install hypr`.
tsk-py = "tsk.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsk"]

[tool.hatch.build.targets.wheel.force-include]
"share/hypr" = "share/hypr"
"share/waybar" = "share/waybar"
