[package]
name = "lae-cli"
description = "LAE command-line interface (Rust rewrite)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lae"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
lae-core = { path = "../lae-core" }
lae-tui = { path = "../lae-tui" }
serde_json = { workspace = true }
