[package]
name = "lae-core"
description = "Shared types, registry, and Waybar export for LAE"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
