[package]
name = "lae-waybar"
description = "Waybar CFFI module for LAE taskspace + workspace indicators"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lae-core = { path = "../lae-core" }
serde = { workspace = true }
waybar-cffi = "0.1.1"
