[package]
name = "tsk-waybar"
description = "Waybar CFFI module for TSK taskspace + workspace indicators"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tsk-core = { path = "../tsk-core" }
serde = { workspace = true }
waybar-cffi = "0.1.1"
